# ponger

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: shuttle-deploy.yml
migrations/: 20241031141548_init.sql  20241101080247_reactions.sql  20241104160624_prefs.sql  20241210105205_polls.sql
src/: main.rs
src/callbacks/: reaction.rs
src/commands/: configs.rs  ctfs.rs  mod.rs  post_ctf.rs
src/types/: ctf.rs  global.rs  mod.rs  poll_modal.rs  preference.rs  reactions.rs
src/utils/: color.rs  ctf_fetcher.rs  ctf_sender.rs  mod.rs  poll.rs  preference.rs
