[package]
name = "ponger"
version = "0.1.0"
edition = "2021"
authors = ["Hu Bowen <contact@hubowen.dev>"]

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
poise = "0.6.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.211"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
