[package]
name = "ponger"
version = "0.1.0"
edition = "2021"
publish = false
authors = [ "Hu Bowen <contact@hubowen.dev>" ]

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = "0.48.0"
shuttle-serenity = "0.48.0"
tracing = "0.1.37"
tokio = "1.26.0"
chrono = "0.4.38"
serde = "1.0.211"
reqwest = { version = "0.12.8", features = ["json"] }
rand = "0.8.5"
hex = "0.4.3"
